# SYDBioedilizia

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile_5659a86.txt  GALLERY_IMPLEMENTATION_SUMMARY.md  GALLERY_QUICK_START.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_P1.md  SECURITY_AUDIT_P2.md  SECURITY_AUDIT_P3.md  SESSION_RECAP.md  all_readmes.txt  animating-modern-react-websites.skill  architecture_analysis.md  backend_logs_utf8.txt  backend_tail.txt  branches.txt  changes.txt  changes_lint.txt  check-models.mjs  check_indent.py  cli_analysis_raw.txt  cli_analysis_utf8.txt  cli_fix_output.txt  cli_fix_output_utf8.txt  commit_files.txt  debug-ai.ts  dockerignore_5659a86.txt  files_415008c.txt  files_5659a86.txt  firestore.indexes.json  firestore.rules  frontend_diff.txt  frontend_diff_utf8.txt  frontend_logs.txt  frontend_logs_utf8.txt  (+23 more)
.idx/: dev.nix
backend_python/: .dockerignore  .env.example  Dockerfile  README.md  backend_logs.txt  check_imports.py  configure_cors.py  debug_file_timestamps.py  debug_prompt.txt  debug_quotas.py  debugging.md  dev.ps1  diagnostic.txt  entrypoint.sh  main.py  process_bg.py  pyproject.toml  pyrightconfig.json  reproduce_chat_history.py  test_jwt_flow.py  test_script.py  verify_media_persistence.py  verify_projects_query.py  verify_render_flow.py
backend_python/docs/: chain_of_thought_analysis.md
backend_python/scripts/: add_price_ranges.py  backfill_gallery.py  canary_monitor.py  configure_cors.py  debug_projects.py  debug_sessions.py  debug_stats.py  download_pdf.py  drain_check.py  eval_rag.py  extract_prezzario.py  fix_project_ownership.py  generate_test_token.py  ingest_docs.py  ingest_normative.py  ingest_prezzario.py  inspect_pinecone.py  list_buckets.py  list_models.py  merge_prezzario.py  pinecone_upload_pdf.py  sync_all_covers.py  sync_project_names.py  test_dashboard_api.py  test_rag_pipeline.py  verify_gemini.py
backend_python/scripts/debug/: README.md  debug_all_files.py  debug_image_access.py  debug_project_status.py  debug_projects_manual.py  debug_users.py  debugging.md  final_check.py  repro_adk_error.py  test_agent_rag.py  test_async_embed.py  test_embed.py  test_error_resp.py  test_fastapi_json.py  test_feedback_db.py  test_final_verify.py  test_i2i_isolation.py  test_render_isolation.py  test_serialization.py  test_serializer.py  test_server.py  test_sync.py  verify_e2e_flow.py  verify_field_types.py  verify_phase2.py  verify_protocol.py  verify_rules_data.py
backend_python/src/adk/: __init__.py  adk_orchestrator.py  agents.py  drain.py  filters.py  guardrails.py  hitl.py  session.py  tools.py
backend_python/src/agents/: sop_manager.py
backend_python/src/api/: chat_history.py  feedback.py  gemini_imagen.py  magic_link.py  passkey.py  perplexity.py  projects_router.py  reports.py  test_router.py  update_metadata.py  upload.py  users_router.py
backend_python/src/auth/: activity_tracker.py  jwt_handler.py
backend_python/src/backend_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend_python/src/core/: config.py  container.py  context.py  exceptions.py  logger.py  rate_limit.py  schemas.py  telemetry.py  tracing.py
backend_python/src/data/: master_price_book.json  renovation_assemblies.json
backend_python/src/db/: firebase_client.py  leads.py  messages.py  projects.py  quotes.py  users.py
backend_python/src/graph/: agent.py  context_builder.py  edges.py  factory.py  quote_graph.py  quote_state.py  state.py  tools_registry.py
backend_python/src/middleware/: app_check.py  idempotency.py  metrics.py  security_headers.py
backend_python/src/models/: chat.py  lead.py  media.py  project.py  reasoning.py  user.py  video_types.py
backend_python/src/prompts/: builder.py  system_instruction.py  system_prompts.py
backend_python/src/repositories/: conversation_repository.py  feedback_repository.py
backend_python/src/schemas/: feedback.py  gallery.py  internal.py  quote.py  storage.py
backend_python/src/services/: account_lifecycle_service.py  admin_service.py  agent_orchestrator.py  aggregation_engine.py  audit.py  base_orchestrator.py  batch_aggregation_engine.py  batch_service.py  gallery_service.py  insight_engine.py  intent_classifier.py  media_processor.py  notification_service.py  orchestrator_factory.py  pdf_service.py  pricing_service.py  rag_service.py  room_analysis_service.py  status_handler.py  storage_service.py
backend_python/src/storage/: firebase_storage.py  upload.py
backend_python/src/tools/: _quote_helpers.py  auth_tools.py  batch_tools.py  gallery.py  generate_render.py  lead_tools.py  listino_tools.py  market_prices.py  n8n_mcp_tools.py  project_files.py  quota.py  quote_tools.py  rag_tools.py  submit_lead.py  sync_wrappers.py
backend_python/src/utils/: async_utils.py  auth_guard.py  circuit_breaker.py  context.py  context_builder.py  data_sanitizer.py  datetime_utils.py  download.py  json_parser.py  rate_limiter.py  security.py  serialization.py  stream_protocol.py
backend_python/tests/: README.md  benchmark_adk.py  conftest.py  get_index_link.py  load_test_adk.py  repro_issues.py  test_listino_tools.py  test_rag_service.py  test_rag_tools.py  verify_flow_logic.py  verify_isolation.py  verify_passkey.py  verify_phase1.py  verify_repo.py
backend_python/tests_manual/: test_latency.py  test_perplexity.py  test_uuid_stream.py  verify_graph_integrity.py
backend_python/testsprite_tests/: TC001_submit_lead_saves_contact_and_project_info.py  TC002_get_market_prices_fetches_current_data.py  TC003_generate_render_produces_photorealistic_images.py  TC004_save_quote_stores_structured_renovation_draft.py  TC005_analyze_room_outputs_structural_style_and_condition.py  TC005_analyze_room_outputs_structural_style_condition_insights.py  TC006_plan_renovation_generates_skeleton_skin_architectural_plan.py  TC007_list_project_files_returns_complete_asset_listing.py  TC009_generate_cad_creates_downloadable_dxf_file.py  TC010_role_based_access_enforces_permissions_and_validation.py  standard_prd.json  testsprite_backend_test_plan.json
(+1029 files in other folders)
