[project]
name = "backend-python"
version = "4.0.0"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "starlette>=1.3.1",
    "firebase-admin>=7.1.0",
    "google-cloud-aiplatform>=1.133.0",
    "google-cloud-firestore>=2.23.0",
    "google-genai>=1.59.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pinecone>=6.0.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.40.0",
    "pydantic-settings>=2.0.0",
    "ezdxf>=1.4.3",
    "python-dateutil>=2.9.0.post0",
    "slowapi>=0.1.9",
    "google-adk>=2.2.0",
    "aiosmtplib>=5.1.0",
    "reportlab>=4.4.10",
    "google-cloud-modelarmor>=0.1.0",
    "fido2>=1.2.0",
    "pypdf>=6.13.3",
    "cryptography>=48.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (requiring live API)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
