[project]
name = "backend-python"
version = "4.0.0"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.1",
    "starlette>=1.3.1",
    "firebase-admin>=7.5.0",
    "google-cloud-aiplatform>=1.161.0",
    "google-cloud-firestore>=2.28.0",
    "google-genai>=2.12.0",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "pinecone>=9.1.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.14.2",
    "ezdxf>=1.4.4",
    "python-dateutil>=2.9.0.post0",
    "slowapi>=0.1.10",
    "google-adk>=2.4.0",
    "aiosmtplib>=5.1.2",
    "reportlab>=5.0.0",
    "google-cloud-modelarmor>=0.7.1",
    "fido2>=2.2.1",
    "pypdf>=6.14.2",
    "cryptography>=49.0.0",
    # Transitive of the google-cloud / vertex / firestore stack. Pinned above the
    # YANKED 1.78.1 ("caused major outage with gcloud serverless environments"),
    # which uv would otherwise keep resolving on Cloud Run.
    "grpcio>=1.82.1",
    # Cloud Trace span exporter used by src/core/tracing.py in production. Was
    # imported but never declared, so the prod try/except silently fell back to
    # the console exporter and traces never reached GCP Cloud Trace.
    "opentelemetry-exporter-gcp-trace>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
# One-off debug/ops scripts are not held to lint standards (see scripts/debug/README.md)
extend-exclude = ["scripts"]

[tool.ruff.lint]
# Initial pragmatic set: pyflakes (F), pycodestyle errors/warnings (E/W), import sorting (I).
# Follow-up candidates: B (bugbear), UP (pyupgrade) — ~400 findings, need manual review.
select = ["E4", "E7", "E9", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv(".env") MUST run before google-adk/google-genai imports (see CLAUDE.md)
"main.py" = ["E402"]
# Test/benchmark scripts use sys.path or env setup before imports
"tests/**" = ["E402"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude live-API tests by default so a plain `pytest` run never calls the real
# Gemini API (no quota/cost). Opt in explicitly with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (requiring live API)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "ruff>=0.15.21",
    "pyright>=1.1.406",
]
